# dropbear

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/server/: README.md  comparison_with_libssh.md  footprint.md
examples/server/main/: CMakeLists.txt  esp_shell.c  idf_component.yml  mem_stats.h  server.c
port/: config.h  default_options_guard.h  idf_stubs.c  stubs.h
server/: CMakeLists.txt  sdkconfig.defaults
server/main/: CMakeLists.txt  esp_shell.c  idf_component.yml  server.c
